Fri Nov 25 19:12:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/Threads/task_three.cpp:
	  Fixed another compile problem.

Fri Nov 25 16:16:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/System_V_IPC/SV_Message_Queues/TMQ_Client.cpp:
	  Fixed compile problems.

Fri Nov 25 12:00:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* ace/config-vxworks5.x.h:
	  Added ACE_HAS_STANDARD_CPP_LIBRARY for DIAB builds.

Fri Nov 25 11:04:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/Threads/task_three.cpp:
        * examples/System_V_IPC/SV_Message_Queues/TMQ_Client.cpp:
	* examples/Logger/Acceptor-server/server_loggerd.cpp:
        * examples/Log_Msg/test_log_msg.cpp:
	  Fixed problems with iostreams for ACE_LACKS_IOSTREAM_TOTALLY builds
          (VxWorks DIAB).

Fri Nov 25 10:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run bug_1535_regression when minimum_corba is enabled.

Fri Nov 25 10:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed some old info about os-patches, these are gone already for
          some time, also corrected the location of the main define, it is now
          in OS_main.h. As last, changed the references to several files from
          the site of Doug to the local directory. This because of two reasons,
          first there are development teams without internet access (yes, they
          still exist in the world), and the site of Doug always gives the
          latest version, but when using a certain ACE version I want to have
          the documentation of MPC belonging to that version, not with the
          current version, which can be something completely different in
          a few years.

Fri Nov 25 08:57:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html: